Release 1.0.7 (#11)
* bump version number

* Refactor manifest search (#10)

* Refactor manifest search

* code review

* PA-4174 Added unit tests (#12)

* Refactor manifest search

* code review

* PA-4174 Added unit tests

* added missing files from previous commit

* fixed imports

* added github action to run tests / standarize pom.xml

* throw proper exception, java naving convention on old methods.